--- a/src/pytest.ini
+++ b/src/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = abdownloads.settings.test
-addopts = --nomigrations --doctest-modules --cov=. --cov-report=html
+addopts = --doctest-modules --cov=. --cov-report=html
