--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ python:
   - "nightly" # currently points to 3.7-dev
 
 # command to install dependencies
-install: "pip install -r src/requirements/local.txt"
+install: "pip install -r requirements/local.txt"
 # command to run tests
 script: pytest
