--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: python
 python:
-  - "3.2"
-  - "3.3"
   - "3.4"
   - "3.5"
   - "3.5-dev" # 3.5 development branch
@@ -12,10 +10,17 @@ python:
 
 env:
   - DJANGO_SETTINGS_MODULE=abdownloads.settings.local
+  - DJANGO=Django==1.8
+  - DJANGO=Django==1.9
+  - DJANGO=Django==1.10
+  - DJANGO=Django
 
 before_script: cd src
 
 # command to install dependencies
-install: "pip install -r requirements/local.txt"
+install:
+  - pip install -r requirements/local.txt
+  - pip install $DJANGO
+  
 # command to run tests
 script: pytest
