--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
 python:
+  - "3.2"
+  - "3.3"
   - "3.4"
   - "3.5"
   - "3.5-dev" # 3.5 development branch
@@ -11,6 +13,7 @@ python:
 env:
   - DJANGO_SETTINGS_MODULE=abdownloads.settings.local
   - DJANGO=Django==1.10
+  - DJANGO=Django==1.11
   - DJANGO=Django
 
 before_script: cd src
