--- a/src/pytest.ini
+++ b/src/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = abdownloads.settings.test
-addopts = --no-migrations --doctest-modules --cov=. --cov-report=html --ds=abdownloads.settings.test
+DJANGO_SETTINGS_MODULE = samplesite.settings.test
+addopts = --no-migrations --doctest-modules --cov=. --cov-report=html --ds=samplesite.settings.test
